# oracledb-clean-schema

./: .dockerignore  .gitignore  CONTRIBUTING.md  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
cli/: Dockerfile
lambda/: Dockerfile  lambda_handler.py
src/oracledb_clean_schema/: __init__.py  __main__.py  constants.py  core.py
src/oracledb_clean_schema/entrypoints/: aws_lambda.py  cli.py
tests/: conftest.py  docker-compose.yml  test_clean.py
tests/oradata/: .gitignore
tests/scripts/db/startup/: 01_create_sample_schema.sql
